check frontend connection

--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
         </div>
     </div>
     
-    <script src="js/itemslist.js"></script>
+    <script src="js/crud.js"></script>
     <script src="js/utils.js"></script>
     <script src="main.js"></script>
 </body>
