finish implementing frontend

--- a/client/index.html
+++ b/client/index.html
@@ -53,30 +53,7 @@
                         <th scope="col"><em>Actions</em></th>
                       </tr>
                     </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>20</td>
-                            <td>14/03/2021</td>
-                            <td>
-                                <button class="btn btn-warning" id="user-1" onclick="editItem(1)">Edit</button>
-                                <button class="btn btn-danger" onclick="deleteItem(1)">Delete</button>
-                            </td>
-                        </tr>
-                        <tr>
-                        <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>20</td>
-                            <td>14/03/2021</td>
-                            <td>
-                                <button class="btn btn-warning" id="user-2" onclick="editItem(2)">Edit</button>
-                                <button class="btn btn-danger" onclick="deleteItem(2)">Delete</button>
-                            </td>
-                      </tr>
-                    </tbody>
+                    <tbody id="table-body"></tbody>
                   </table>
             </div>
         </div>
